# emocrypt

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Readme.md
CMake/: Findlibsodium.cmake
cli/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  encrypt.cpp  encrypt.h  fd.cpp  fd.h  format.h  options.cpp  options.h  symbols.h  term_echo.cpp  term_echo.h  utf8.cpp  utf8.h  version.h
docs/: index.html
docs/css/: index.css
docs/js/: channels.js  emocrypt.js  emocrypt.wasm  index.js  marquee.js  worker.js
emscripten/: CMakeLists.txt  emocrypt.cpp  emocrypt.h  index.html
emscripten/css/: index.css
test/: CMakeLists.txt  test_bitstream.cpp  test_encrypt.cpp  test_stego.cpp  test_utf8.cpp
util/: CMakeLists.txt  generate_data.cpp
website/: emocrypt.js  emocrypt.wasm  index.html
